--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,22 @@
-Source: template-repository
-Section: unknown
+Source: golang-github-ianlancetaylor-demangle
+Section: golang
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: Debian Go Packaging Team <team+pkg-go@tracker.debian.org>
+Uploaders: Stephen Gelman <ssgelm@debian.org>
+Build-Depends: debhelper-compat (= 13),
+               dh-golang,
+               golang-any
+Standards-Version: 4.5.1
+Homepage: https://github.com/ianlancetaylor/demangle
+Vcs-Browser: https://salsa.debian.org/go-team/packages/golang-github-ianlancetaylor-demangle
+Vcs-Git: https://salsa.debian.org/go-team/packages/golang-github-ianlancetaylor-demangle.git
+XS-Go-Import-Path: github.com/ianlancetaylor/demangle
+Rules-Requires-Root: no
+Testsuite: autopkgtest-pkg-go
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: golang-github-ianlancetaylor-demangle-dev
+Architecture: all
+Depends: ${misc:Depends}
+Multi-Arch: foreign
+Description: C++ symbol name demangler written in Go
+ A Go package that can be used to demangle C++ symbol names.
